docs: Swagger de login y logout
